// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/qti-components/qti-stylesheet Default smoke-test 1`] = `
<div id="root-inner">
  <qti-assessment-item>
    <qti-stylesheet href="/qti-stylesheet/linked.css"
                    type="text/css"
    >
    </qti-stylesheet>
    <qti-item-body>
      <qti-choice-interaction class="qti-orientation-horizontal qti-input-control-hidden"
                              max-choices="1"
                              shuffle="false"
      >
        <qti-simple-choice identifier="A">
          Boer
        </qti-simple-choice>
        <qti-simple-choice identifier="B">
          Doek
        </qti-simple-choice>
        <qti-simple-choice identifier="C">
          Voet
        </qti-simple-choice>
      </qti-choice-interaction>
    </qti-item-body>
    <link rel="stylesheet"
          type="text/css"
          media="screen"
          href="/qti-stylesheet/linked.css"
    >
    <style media="screen">
    </style>
  </qti-assessment-item>
</div>
`;

exports[`lib/qti-components/qti-stylesheet Inline smoke-test 1`] = `
<div id="root-inner">
  <qti-assessment-item>
    <qti-stylesheet type="text/css">
      qti-assessment-item {
  display: flex;
  flex-orientation: column;
}

qti-assessment-item qti-simple-choice {
  position: relative !important;
  margin: 20px !important;
  background: #ff0000;
  color: rgb(63, 63, 63) !important;
  font-size: 40px !important;
  font-weight: bold !important;
  line-height: 1.3em !important;
  border: 2px dashed rgb(172, 172, 172) !important;
  border-radius: 0px !important;
  font-weight: 800 !important;
  font-family: 'Arial', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

qti-assessment-item button:active {
  transform: translate(0px, 5px);
  border-bottom: 10px solid;
}

qti-assessment-item qti-simple-choice[aria-checked='true'] {
  background-color: white !important;
  color: #ff0000 !important;
  /* animation: zoom 0.2s ease-in; */
}
    </qti-stylesheet>
    <qti-item-body>
      <qti-choice-interaction class="qti-orientation-horizontal qti-input-control-hidden"
                              max-choices="1"
                              shuffle="false"
      >
        <qti-simple-choice identifier="A">
          Boer
        </qti-simple-choice>
        <qti-simple-choice identifier="B">
          Doek
        </qti-simple-choice>
        <qti-simple-choice identifier="C">
          Voet
        </qti-simple-choice>
      </qti-choice-interaction>
    </qti-item-body>
    <style media="screen">
      qti-assessment-item {
  display: flex;
  flex-orientation: column;
}

qti-assessment-item qti-simple-choice {
  position: relative !important;
  margin: 20px !important;
  background: #ff0000;
  color: rgb(63, 63, 63) !important;
  font-size: 40px !important;
  font-weight: bold !important;
  line-height: 1.3em !important;
  border: 2px dashed rgb(172, 172, 172) !important;
  border-radius: 0px !important;
  font-weight: 800 !important;
  font-family: 'Arial', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

qti-assessment-item button:active {
  transform: translate(0px, 5px);
  border-bottom: 10px solid;
}

qti-assessment-item qti-simple-choice[aria-checked='true'] {
  background-color: white !important;
  color: #ff0000 !important;
  /* animation: zoom 0.2s ease-in; */
}
    </style>
  </qti-assessment-item>
</div>
`;
